menu page d'acceuil

--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -7,19 +7,23 @@
   </head>
  <body>
  <header>
-
 </header> 
-<div id="main">
-	<div id = "first">
-	<a href = "page1.html" >Acceuil</a> 
+<nav>
+<ul>
+	<li><a href = "../page1/page_de_garde.html" > Page de garde </a></li> 
+	<li><a href="../page3/page_de_garde.html"> Qui sommes nous </a></li>
+	<li><a href= "../page4/page_de_garde.html"> Recherche </a></li>
+	<li><a href="../page5/page_de_garde.html" > Aide</a></li>
+	<li><a href="pag" >Commentaire</a> </li>
+	<li><a href="" >Achats</a></li> </li>
+	<div>
+	<li id="search"><label> <input placeholder ="saisir le nom de l'article"> <a href="../page4/page_de_garde.html"> Rechercher </a></label></li>
+	<li id="panier"> <a href="">Mes achats </a><img src="p.png"></li>
 	</div>
-	<div id = "second">
-	<a href="page3.html">Qui sommes nous </a>
-	</div>
-	<div id="third">
-	<a href= "page4.html">Recherche</a>
-	</div>
-	<div id ="fourth">
-	<a href="page5.html" >Menu</a> 
-	</div>
-</div>
+	</ul>
+</nav>
+
+<video src=" " autoplay > </video>
+	
+</body>
+</html>
