--- a/page1/Page_de_garde.html
+++ b/page1/Page_de_garde.html
@@ -6,9 +6,10 @@
         <title>Page de garde</title>
     </head>
   <body>
-  
+	
 	<header> 
-	MonDoudouTouDou
+	<img class="logo" src="assets1/AccéderAccueil.png" alt="Accéder au site"/>
+	<p>MonDoudouTouDou<p>
 	</header>
 	
 	<aside class="images"> 
@@ -24,7 +25,8 @@
 	</aside>
 	
 	<footer>
-	<p> <a href="../page2/Acceuil.html"> Accéder au site </a> </p>
+	<a href="../page2/Accueil.html"><img class="acceuil1" src="assets1/AccéderAccueil.png" alt="Accéder au site"/></a>
+	<p> <a href="../page2/Accueil.html"> Accéder au site </a> </p>
 	</footer>
 	
     </body>
