--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets2/style2.css">
-    <title>test</title>
+    <title>Accueil</title>
   </head>
  <body>
  <header>
@@ -22,8 +22,19 @@
 	</div>
 	</ul>
 </nav>
-
-<video src=" " autoplay > </video>
+<section>
+<MARQUEE scrollamount="4">
+<img src="i1.jpg">
+<img src="i2.jpg">
+<img src="i3.png">
+<img src="i4.jpg">
+</MARQUEE>
+</section>
+<div>
+Nous contacter  Logo facebook twitter .....
+</div>
+	<footer>
 	
+	</footer>
 </body>
 </html>
