--- a/page1/Page_de_garde.html
+++ b/page1/Page_de_garde.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-		<link rel="stylesheet" href="assets1/style1.css" />
+		<link rel="stylesheet" href="assets1/style1.css" type="text/css"/>
         <title>Page de garde</title>
     </head>
   <body>
@@ -13,37 +13,35 @@
 	
 	<aside class="images"> 
 
-	<MARQUEE class="defilimage" Direction="up"> 
-	
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	
-	</MARQUEE>
-	
+	<div id="defilimage">	
+
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+
+	</div>
+
 	</aside>
 	
 	<main> 
-	<p class="bienvenue">Bienvenue sur notre site de vente de doudous</p>
+
+	<p class="bienvenue">Bienvenue sur MonDoudou.com, site dédié à la vente de doudous</p>
 	 
 	</main>
 	
 	<aside class="promos">
+
+	<div id="defilpromo">	
+
+	<img src="assets1/homer.jpg" alt="Accéder au site"/>
+	<img src="assets1/homer.jpg" alt="Accéder au site"/>
+	<img src="assets1/homer.jpg" alt="Accéder au site"/>
+
+	</div>
 	
-	<MARQUEE class="defilpromo" Direction="down"> 
-	
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	
-	
-	</MARQUEE>
 	</aside>
 	
 	<footer>
