--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -9,30 +9,45 @@
  <header>
 </header> 
 <nav>
-<ul>
+<ul> 
 	<li><a href = "../page1/page_de_garde.html" > Page de garde </a></li> 
 	<li><a href="../page3/page_de_garde.html"> Qui sommes nous </a></li>
 	<li><a href= "../page4/page_de_garde.html"> Recherche </a></li>
 	<li><a href="../page5/page_de_garde.html" > Aide</a></li>
-	<li><a href="pag" >Commentaire</a> </li>
+	<li><a href="pag" >Nous contacter</a> </li>
 	<li><a href="" >Achats</a></li> </li>
+	<li><a href="" >Me connecter </a></li>
+	<div class="modal">
+		<div class="modal-container">
+		<p> entrer votre identifiant</p>
+		<a href="#">fermer</a>
+		</div>
+	</div>
 	<li id="search"><label> <input placeholder ="saisir le nom de l'article"> <a href="../page4/page_de_garde.html"> Rechercher </a></label></li>
 	<li id="panier"> <a href=""> Mes achats </a><img src="p.png"></li>
 	</ul>
 </nav>
 <section>
-<MARQUEE scrollamount="4">
-<img src="i1.jpg">
-<img src="i2.jpg">
+<MARQUEE scrollamount="10">
+<img src="n1.png">
+<img src="n2.png">
 <img src="i3.png">
-<img src="i4.jpg">
+<img src="n3.png">
 </MARQUEE>
 </section>
-<div>
-Nous contacter  Logo facebook twitter .....
-</div>
+
+
+<p> .</p>
+<p> .</p>
+<p>.</p>
+
+
+
+
 	<footer>
-	
+	<img src = "facebook.jpg">
+	<img src = "insta.png">
+	<img src = "Twitter.png">
 	</footer>
 </body>
 </html>
