enleve bordure ronde

--- a/page1/Page_de_garde.html
+++ b/page1/Page_de_garde.html
@@ -21,6 +21,10 @@
 	<p>APPRECIATION</p>
 	<p>APPRECIATION</p>
 	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
+	<p>APPRECIATION</p>
 
 	</div>
 
@@ -28,8 +32,12 @@
 	
 	<main> 
 
+	<div class="msgbienvenue">
+
 	<p class="bienvenue">Bienvenue sur MonDoudou.com, site dédié à la vente de doudous</p>
-	 
+
+	</div>
+
 	</main>
 	
 	<aside class="promos">
@@ -39,6 +47,7 @@
 	<img src="assets1/homer.jpg" alt="Accéder au site"/>
 	<img src="assets1/homer.jpg" alt="Accéder au site"/>
 	<img src="assets1/homer.jpg" alt="Accéder au site"/>
+	
 
 	</div>
 	
