--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -16,19 +16,14 @@
 	<li><a href="../page5/page_de_garde.html" > Aide</a></li>
 	<li><a href="pag" >Nous contacter</a> </li>
 	<li><a href="" >Achats</a></li> </li>
-	<li><a href="" >Me connecter </a></li>
-	<div class="modal">
-		<div class="modal-container">
-		<p> entrer votre identifiant</p>
-		<a href="#">fermer</a>
-		</div>
-	</div>
+	<li><a href="#" >Me connecter </a></li>
+	
 	<li id="search"><label> <input placeholder ="saisir le nom de l'article"> <a href="../page4/page_de_garde.html"> Rechercher </a></label></li>
 	<li id="panier"> <a href=""> Mes achats </a><img src="p.png"></li>
 	</ul>
 </nav>
 <section>
-<MARQUEE scrollamount="10">
+<MARQUEE scrollamount="65">
 <img src="n1.png">
 <img src="n2.png">
 <img src="i3.png">
@@ -40,14 +35,25 @@
 <p> .</p>
 <p> .</p>
 <p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
+<p>.</p>
 
-
+<video width="500" height="500" controls>
+  <source src="vv.mp4" type="video/mp4">
+  
+  Your browser does not support the video tag.
+</video>
 
 
 	<footer>
-	<img src = "facebook.jpg">
-	<img src = "insta.png">
-	<img src = "Twitter.png">
+	<a href=""><img src = "facebook.jpg"></a>
+	<a href=""><img src = "insta.png"></a>
+	<a href=""><img src = "Twitter.png"></a>
 	</footer>
 </body>
 </html>
