--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -7,13 +7,15 @@
   </head>
  <body>
  <header>
+ <img class="logo" src="assets1/image1.png" alt="Accéder au site"/>
+ <p> jj</p>
 </header> 
 <nav>
 <ul> 
 	<li><a href = "../page1/page_de_garde.html" > Page de garde </a></li> 
 	<li><a href="../page3/page_de_garde.html"> Qui sommes nous </a></li>
 	<li><a href= "../page4/page_de_garde.html"> Recherche </a></li>
-	<li><a href="../page5/page_de_garde.html" > Aide</a></li>
+	<li><a href="../page5/page_de_garde.html" > Commentaire</a></li>
 	<li><a href="pag" >Nous contacter</a> </li>
 	<li><a href="" >Achats</a></li> </li>
 	<li><a href="#" >Me connecter </a></li>
@@ -43,8 +45,7 @@
 <p>.</p>
 <p>.</p>
 
-<video width="500" height="500" controls>
-  <source src="vv.mp4" type="video/mp4">
+
   
   Your browser does not support the video tag.
 </video>
