--- a/page5/Page_de_garde.html
+++ b/page5/Page_de_garde.html
@@ -6,6 +6,10 @@
     <title>Commentaire</title>
   </head>
   <body>
+   <header>
+ <img class="logo" src="assets1/image1.png" alt="Accéder au site"/>
+ <p> jj</p>
+</header> 
   <nav>
 <ul> 
 	<li><a href = "../page1/page_de_garde.html" > Page de garde </a></li> 
@@ -21,6 +25,15 @@
 	</ul>
 </nav>
 <section>
+<textarea placeholder="" style="width: 500px; height: 500px"> votre commentaire ici </textarea>
+<button>envoyer</button>
+<button>Annuler</button>
+</section>	
+	<footer>
+	<a href=""><img src = "facebook.jpg"></a>
+	<a href=""><img src = "insta.png"></a>
+	<a href=""><img src = "Twitter.png"></a>
+	</footer>
   
 
   </body>
