page 1 presque final

--- a/page1/Page_de_garde.html
+++ b/page1/Page_de_garde.html
@@ -15,7 +15,7 @@
 
 	<div id="defilimage">	
 
-	<p>APPRECIATION</p>
+	<p>Ce site est vraiment génial ! </p>
 	<p>APPRECIATION</p>
 	<p>APPRECIATION</p>
 	<p>APPRECIATION</p>
@@ -32,6 +32,7 @@
 	
 	<main> 
 
+
 	<div class="msgbienvenue">
 
 	<p class="bienvenue">Bienvenue sur MonDoudou.com, site dédié à la vente de doudous</p>
@@ -41,20 +42,27 @@
 	</main>
 	
 	<aside class="promos">
-
-	<div id="defilpromo">	
-
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
-	<img src="assets1/homer.jpg" alt="Accéder au site"/>
 	
+	<div class="defilpromo">	
+
+	<img src="assets1/doudous1/peluche1.png" alt="doudou1"/>
+	<img src="assets1/doudous1/peluche2.png" alt="doudou2"/>
+	<img src="assets1/doudous1/peluche3.png" alt="doudou3"/>
+	<img src="assets1/doudous1/peluche4.png" alt="doudou4"/>
+	<img src="assets1/doudous1/peluche5.png" alt="doudou5"/>
 
 	</div>
+	
+	<div class="titrepromo"> 
+	<p> Offres du jour ! </p>
+	</div>
+	
+
 	
 	</aside>
 	
 	<footer>
-	<a href="../page2/Accueil.html"><img class="acceuil1" src="assets1/accedersite.png" alt="Accéder au site"/></a>
+	<a href="../page2/Acceuil.html"><img class="acceuil1" src="assets1/accedersite.png" alt="Accéder au site"/></a>
 	</footer>
 	
     </body>
