page accueil base

--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -1,55 +1,78 @@
 <!DOCTYPE>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets2/style2.css">
     <title>Accueil</title>
-  </head>
- <body>
- <header>
- <img class="logo" src="assets1/image1.png" alt="Accéder au site"/>
- <p> jj</p>
-</header> 
+</head>
+
+		<body>
+
+		<header>
+
+<img class="logo" src="logoent.png" alt="Accéder au site"/>
+ 
+
+
+<li id="search"><label> <input placeholder ="Rechercher un produit..."> <a href="../page4/page_de_garde.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
+
+<ul>
+<img src="p.png" alt="imgpanier"/>
+<p id="panier"> <a href=""> PANIER </a> </li>
+</ul>
+
+
+
+		</header> 
+
 <nav>
+
 <ul> 
-	<li><a href = "../page1/page_de_garde.html" > Page de garde </a></li> 
-	<li><a href="../page3/page_de_garde.html"> Qui sommes nous </a></li>
-	<li><a href= "../page4/page_de_garde.html"> Recherche </a></li>
-	<li><a href="../page5/page_de_garde.html" > Commentaire</a></li>
-	<li><a href="pag" >Nous contacter</a> </li>
-	<li><a href="" >Achats</a></li> </li>
-		<li id="search"><label> <input placeholder ="saisir le nom de l'article"> <a href="../page4/page_de_garde.html"> Rechercher </a></label></li>
-	<li id="panier"> <a href=""> Mes achats </a><img src="p.png"></li>
-	</ul>
+	<li><a href = "../page2/Acceuil.html" > ACCUEIL </a></li> 
+	<li><a href= "../page4/Promotions.html"> PROMOTIONS </a></li>
+	<li><a href="../page3/Doudous.html" > DOUDOUS </a></li>
+	<li><a href="../page6/Quisommes.html"> QUI SOMMES-NOUS ? </a></li>
+			
+</ul>
+
 </nav>
+
 <section>
 
-<MARQUEE scrollamount="0">
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
+<p></p>
 
-<img src="n1.png">
-<img src="i3.png">
-<img src="n3.png">
-</MARQUEE>
 </section>
 
 
-<p> .</p>
-<p> .</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
-<p>.</p>
 
 
 
-	<footer>
-	<a href=""><img src = "facebook.jpg"></a>
-	<a href=""><img src = "insta.png"></a>
-	<a href=""><img src = "Twitter.png"></a>
-	</footer>
-</body>
+<footer>
+
+<p><a href="../page3/page_de_garde.html"> Votre avis </a> </p>
+<p><a href="../page3/page_de_garde.html"> Nous contacter </a> </p>
+
+<div class="social">
+
+<p> Nous suivre </p>
+<a href=""><img src = "facebook.jpg"></a>
+<a href=""><img src = "insta.png"></a>
+<a href=""><img src = "Twitter.png"></a>
+
+</div>
+
+
+
+</footer>
+
+		</body>
+
 </html>
