--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -15,11 +15,11 @@
  
 
 
-<li id="search"><label> <input placeholder ="Rechercher un produit..."> <a href="../page4/page_de_garde.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
+<li id="search"><label> <input type = "text" placeholder ="Rechercher un produit..."> <a href="../page4/page_de_garde.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
 
 <ul>
-<img src="p.png" alt="imgpanier"/>
-<p id="panier"> <a href=""> PANIER </a> </li>
+<img src="panier.png" alt="imgpanier"/>
+<p id="panier"> <a style="text-decoration:none" href=""> PANIER </a> </li>
 </ul>
 
 
@@ -29,45 +29,34 @@
 <nav>
 
 <ul> 
-	<li><a href = "../page2/Acceuil.html" > ACCUEIL </a></li> 
-	<li><a href= "../page4/Promotions.html"> PROMOTIONS </a></li>
-	<li><a href="../page3/Doudous.html" > DOUDOUS </a></li>
-	<li><a href="../page6/Quisommes.html"> QUI SOMMES-NOUS ? </a></li>
+	<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
+	<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
+	<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
+	<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
 			
 </ul>
 
 </nav>
 
-<section>
-
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-
-</section>
-
-
-
-
-
 <footer>
 
-<p><a href="../page3/page_de_garde.html"> Votre avis </a> </p>
-<p><a href="../page3/page_de_garde.html"> Nous contacter </a> </p>
+	<div class="avis">
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Votre avis </a> </p>
+<img src = "pouce.png" alt = "avisclient"></a>
 
-<div class="social">
+	</div>
 
+	<div class="contact">
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Nous contacter </a> </p>
+<img src = "telephone.png" alt = "contactent"></a>
+	</div>
+
+	<div class="social">
 <p> Nous suivre </p>
-<a href=""><img src = "facebook.jpg"></a>
-<a href=""><img src = "insta.png"></a>
-<a href=""><img src = "Twitter.png"></a>
-
-</div>
+<a href="https://fr-fr.facebook.com/Disney/"><img src = "facebook.jpg" alt = "lienfacebook"></a>
+<a href="https://www.instagram.com/disney/"><img src = "insta.png" alt = "lieninsta"></a>
+<a href="https://twitter.com/disney"><img src = "Twitter.png" alt = "lientwitter"></a>
+	</div>
 
 
 
