ajout page 6 et 7

--- a/page7/contacter.html
+++ b/page7/contacter.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="assets2/style2.css">
+    <link rel="stylesheet" type="text/css" href="assets7/style7.css">
     <title>Accueil</title>
 </head>
 
@@ -41,13 +41,13 @@
 <footer>
 
 	<div class="avis">
-<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Votre avis </a> </p>
 <img src = "pouce.png" alt = "avisclient"></a>
 
 	</div>
 
 	<div class="contact">
-<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Nous contacter </a> </p>
 <img src = "telephone.png" alt = "contactent"></a>
 	</div>
 
