ajout page 8 et 9 + fin page de garde

--- a/page1/Page_de_garde.html
+++ b/page1/Page_de_garde.html
@@ -8,27 +8,27 @@
   <body>
 	
 	<header> 
-	<img class="logo" src="assets1/image1.png" alt="Accéder au site"/>
+
+	<img class="logo" src="assets1/logoent2.png" alt="logoentreprise"/>
 	</header>
 	
 	<aside class="images"> 
 
 	<div id="defilimage">	
 
-	<p>Ce site est vraiment génial ! </p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-	<p>APPRECIATION</p>
-
-
+	<img src="assets1/avis1/comm1.png" alt="avis1"/>
+	<img src="assets1/avis1/comm2.png" alt="avis2"/>
+	<img src="assets1/avis1/comm3.png" alt="avis3"/>
+	<img src="assets1/avis1/comm4.png" alt="avis4"/>
+	<img src="assets1/avis1/comm5.png" alt="avis5"/>
 
 	</div>
+
+	<div class="titreavis"> 
+	<p> Vos avis </p>
+	</div>
+	
+
 
 	</aside>
 	
@@ -65,7 +65,7 @@
 	</aside>
 	
 	<footer>
-	<a href="../page2/Acceuil.html"><img class="acceuil1" src="assets1/accedersite.png" alt="Accéder au site"/></a>
+	<a id = "site" style="text-decoration:none" href="../page2/Acceuil.html"> <p> Accéder au site </p> </a>
 	</footer>
 	
     </body>
