--- a/page8/rechercher.html
+++ b/page8/rechercher.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="assets2/style2.css">
+    <link rel="stylesheet" type="text/css" href="assets8/style8.css">
     <title>Accueil</title>
 </head>
 
@@ -11,15 +11,15 @@
 
 		<header>
 
-<a href="../page2/Acceuil.html"> <img class="logo" src="logoent.png" alt="logoent"/> </a>
+<img class="logo" src="logoent.png" alt="Accéder au site"/>
  
 
 
-<li id="search"><label> <input type = "text" placeholder ="Rechercher un produit..."> <a href="../page8/rechercher.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
+<li id="search"><label> <input type = "text" placeholder ="Rechercher un produit..."> <a href="../page4/page_de_garde.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
 
 <ul>
-<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
-<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
+<img src="panier.png" alt="imgpanier"/>
+<p id="panier"> <a style="text-decoration:none" href=""> PANIER </a> </li>
 </ul>
 
 
@@ -41,13 +41,13 @@
 <footer>
 
 	<div class="avis">
-<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Votre avis </a> </p>
 <img src = "pouce.png" alt = "avisclient"></a>
 
 	</div>
 
 	<div class="contact">
-<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
+<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Nous contacter </a> </p>
 <img src = "telephone.png" alt = "contactent"></a>
 	</div>
 
