--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -14,8 +14,11 @@
 <a href="../page2/Acceuil.html"> <img class="logo" src="logoent.png" alt="logoent"/> </a>
  
 
+<form action="../page8/rechercher.html">
 
-<li id="search"><label> <input type = "text" placeholder ="Rechercher un produit..."> <a href="../page8/rechercher.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
+<p id="search"><label> <input type="search" placeholder ="Rechercher un produit..."> <a href="../page8/rechercher.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </p>
+
+</form>
 
 <ul>
 <a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
