ajout top meilleure et avis

--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -42,6 +42,8 @@
 
 	<main>
 		
+		
+
 		<div id="slideshow">
 			<ul id="sContent">
 				<li><img src="peluche1.jpg" alt="1" /></li>
@@ -49,6 +51,68 @@
 				<li><img src="peluche3.jpg" alt="3" /></li>
 			</ul>
 		</div>
+
+
+		<aside class="topvente"> 
+
+		<div id="listetop">
+
+			<img src="doudous1/peluche1.png" alt="doudou1"/>
+			<img src="doudous1/peluche2.png" alt="doudou2"/>
+			<img src="doudous1/peluche3.png" alt="doudou3"/>
+			<img src="doudous1/peluche4.png" alt="doudou4"/>
+			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			
+		</div>
+
+		<div class="titretop"> 
+		<p> Top ventes doudous </p>
+		</div>
+
+		</aside>
+
+
+
+		<aside class="meilleurevente"> 
+
+		
+
+		<div id="listemeilleure">
+
+			<img src="doudous1/peluche1.png" alt="doudou1"/>
+			<img src="doudous1/peluche2.png" alt="doudou2"/>
+			<img src="doudous1/peluche3.png" alt="doudou3"/>
+			<img src="doudous1/peluche4.png" alt="doudou4"/>
+			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			
+		</div>
+
+		<div class="titremeilleure"> 
+		<p> Meilleures ventes doudous </p>
+		</div>
+
+		</aside>
+
+
+
+		<aside class="avisvente"> 
+
+		
+		<div id="listevente">
+
+			<img src="doudous1/peluche1.png" alt="doudou1"/>
+			<img src="doudous1/peluche2.png" alt="doudou2"/>
+			<img src="doudous1/peluche3.png" alt="doudou3"/>
+			<img src="doudous1/peluche4.png" alt="doudou4"/>
+			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			
+		</div>
+
+		<div class="titrevente"> 
+		<p> Nos clients nous aiment </p>
+		</div>
+
+		</aside>
 
 	</main>
 
