--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -100,11 +100,11 @@
 		
 		<div id="listevente">
 
-			<img src="doudous1/peluche1.png" alt="doudou1"/>
-			<img src="doudous1/peluche2.png" alt="doudou2"/>
-			<img src="doudous1/peluche3.png" alt="doudou3"/>
-			<img src="doudous1/peluche4.png" alt="doudou4"/>
-			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			<img src="avis1/comm1.png" alt="avis1"/>
+			<img src="avis1/comm2.png" alt="avis2"/>
+			<img src="avis1/comm4.png" alt="avis3"/>
+			<img src="avis1/comm5.png" alt="avis4"/>
+	
 			
 		</div>
 
