--- a/page4/Promotions.html
+++ b/page4/Promotions.html
@@ -7,61 +7,69 @@
     <title>Accueil</title>
 </head>
 
-		<body>
+<body>
 
-		<header>
+	<header>
 
-<img class="logo" src="logoent.png" alt="Accéder au site"/>
+		<a href="../page2/Acceuil.html"> <img class="logo" src="logoent.png" alt="logoent"/> </a>
  
 
+		<form action="../page8/rechercher.html">
 
-<li id="search"><label> <input type = "text" placeholder ="Rechercher un produit..."> <a href="../page4/page_de_garde.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </li>
+			<p id="search"><label> <input type="search" placeholder ="Rechercher un produit..."> <a href="../page8/rechercher.html"> <img class="loupe" src="loupe.png" alt="rechercher"/> </a> </label> </p>
 
-<ul>
-<img src="panier.png" alt="imgpanier"/>
-<p id="panier"> <a style="text-decoration:none" href=""> PANIER </a> </li>
-</ul>
+		</form>
+
+		<ul>
+			<a href="../page9/panier.html"> <img src="panier.png" alt="imgpanier"/> </a>
+			<p id="panier"> <a style="text-decoration:none" href="../page9/panier.html"> PANIER </a> </li>
+		</ul>
 
 
+	</header> 
 
-		</header> 
+	<nav id="menu2">
 
-<nav>
-
-<ul> 
-	<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
-	<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
-	<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-	<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+		<ul> 
+			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
+			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
+			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
+			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
 			
-</ul>
+		</ul>
 
-</nav>
+	</nav>
 
-<footer>
+	<main>
 
-	<div class="avis">
-<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Votre avis </a> </p>
-<img src = "pouce.png" alt = "avisclient"></a>
 
-	</div>
-
-	<div class="contact">
-<p><a style="text-decoration:none" href="../page3/page_de_garde.html"> Nous contacter </a> </p>
-<img src = "telephone.png" alt = "contactent"></a>
-	</div>
-
-	<div class="social">
-<p> Nous suivre </p>
-<a href="https://fr-fr.facebook.com/Disney/"><img src = "facebook.jpg" alt = "lienfacebook"></a>
-<a href="https://www.instagram.com/disney/"><img src = "insta.png" alt = "lieninsta"></a>
-<a href="https://twitter.com/disney"><img src = "Twitter.png" alt = "lientwitter"></a>
-	</div>
+	</main>
 
 
 
-</footer>
 
-		</body>
+	<footer>
+
+		<div class="avis">
+			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
+			<img src = "pouce.png" alt = "avisclient"></a>
+
+		</div>
+
+		<div class="contact">
+			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
+			<img src = "telephone.png" alt = "contactent"></a>
+		</div>
+
+		<div class="social">
+			<p> Nous suivre </p>
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "facebook.jpg" alt = "lienfacebook"></a>
+			<a href="https://www.instagram.com/disney/"><img src = "insta.png" alt = "lieninsta"></a>
+			<a href="https://twitter.com/disney"><img src = "Twitter.png" alt = "lientwitter"></a>
+			</div>
+
+	</footer>
+
+</body>
 
 </html>
