--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -42,6 +42,49 @@
 
 	<main>
 
+		<article id="articles">
+
+
+
+			<section class="listeart"
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			<a href="https://fr-fr.facebook.com/Disney/"><img src = "i1.jpg" alt = "lienfacebook"></a>
+
+			</section>
+
+			<div id="ordre"> 
+			<p class="lister"> Lister : 10 produits par page </p>
+			<p class="trier"> Tri </p>
+			</div>
+
+			<div class="titreart"> 
+			<p> Nos produits </p>
+			</div>
+
+		</article>
+
 
 	</main>
 
