--- a/page5/Commentaire.html
+++ b/page5/Commentaire.html
@@ -39,10 +39,23 @@
 		</ul>
 
 	</nav>
-
+	
 	<main>
-
-
+	<ul>
+	
+	<li><label>Nom : <input ></label></li>
+	<li><label>Prénom : <input></label></li>
+	<li><label>Adresse(rue, ville, pays) : <input class="champ" placeholder="rue"></label></li>
+	<li><input class="champ" placeholder="Ville"></label></li>
+	<li> <input class="champ" placeholder="Pays"></label></li>
+	<li><label>Téléphone  : <input></label></li>
+	<li><label>Adresse Mail : <input></label></li>
+	</ul>
+	<textarea style="width: 300px; height: 200px" placeholder="votre commentaire ici "></textarea> 
+	
+	<button> Envoyé</button>
+	<button> Annuler </button>
+	
 	</main>
 
 
