--- a/page7/contacter.html
+++ b/page7/contacter.html
@@ -41,7 +41,11 @@
 	</nav>
 
 	<main>
-
+	<p> Nous sommes toujours à votre disposition </p>
+	<p> <img src = "tel.png"  alt = "Téléphone" > Téléphone : 0611802587</p>
+	<p> <img src = "mail.png"  alt = "mail" > Mail:<a href="">  Mondoudou.toutdoux@gmail.com</a></p>
+	<p> <img src = "gg.png"  alt = "adr" > Adresse : 143 Rue des peluches </p>
+	
 
 	</main>
 
