--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -88,7 +88,7 @@
 		</div>
 
 		<div class="titremeilleure"> 
-		<p> Meilleures ventes doudous </p>
+		<p> Nos plus beaux doudous </p>
 		</div>
 
 		</aside>
