--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -79,11 +79,11 @@
 
 		<div id="listemeilleure">
 
-			<img src="doudous1/peluche1.png" alt="doudou1"/>
-			<img src="doudous1/peluche2.png" alt="doudou2"/>
-			<img src="doudous1/peluche3.png" alt="doudou3"/>
-			<img src="doudous1/peluche4.png" alt="doudou4"/>
-			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			<img src="doudous1/peluche6.jpg" alt="doudou1"/>
+			<img src="doudous1/peluche7.jpg" alt="doudou2"/>
+			<img src="doudous1/peluche8.jpg" alt="doudou3"/>
+			<img src="doudous1/peluche9.jpg" alt="doudou4"/>
+			<img src="doudous1/peluche10.jpg" alt="doudou5"/>
 			
 		</div>
 
