--- a/page9/panier.html
+++ b/page9/panier.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets9/style9.css">
-    <title>Accueil</title>
+    <title>Panier</title>
 </head>
 
 <body>
