--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets3/style3.css">
-    <title>MonDoudou.com</title>
+    <title>Nos produits</title>
 </head>
 
 <body>
