--- a/page5/Commentaire.html
+++ b/page5/Commentaire.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets5/style5.css">
-    <title>Accueil</title>
+    <title>Vos avis</title>
 </head>
 
 <body>
