--- a/page6/Quisommes.html
+++ b/page6/Quisommes.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets6/style6.css">
-    <title>Accueil</title>
+    <title>Qui sommes-nous ?</title>
 </head>
 
 <body>
