page article detaillé

--- a/page3/Doudous.html
+++ b/page3/Doudous.html
@@ -46,25 +46,23 @@
 
 			<section class="listeart">
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"> <img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
-
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p></a>
+			<a href="../page10/article.html" style="text-decoration:none"><img src = "i1.jpg" alt = "lienfacebook"> <p>Doudou tout doux de haute qualité avec absorbeur de bave, fabriqué en France dans des usines chinoises </p> <p class="prix"> 1000€ </p> </a>
 
 			</section>
 
