redirection accueil vers doudous

--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -46,9 +46,9 @@
 
 		<div id="slideshow">
 			<ul id="sContent">
-				<li><img src="peluche1.jpg" alt="1" /></li>
-				<li><img src="peluche2.jpg" alt="2" /></li>
-				<li><img src="peluche3.jpg" alt="3" /></li>
+				<a href="../page3/Doudous.html"> <img src="peluche1.jpg" alt="1" /></li> </a> <li>
+				 <a href="../page3/Doudous.html"> <li><img src="peluche2.jpg" alt="2" /></li> </a>
+				 <a href="../page3/Doudous.html"> <li><img src="peluche3.jpg" alt="3" /></li> </a>
 			</ul>
 		</div>
 
@@ -57,11 +57,11 @@
 
 		<div id="listetop">
 
-			<img src="doudous1/peluche1.png" alt="doudou1"/>
-			<img src="doudous1/peluche2.png" alt="doudou2"/>
-			<img src="doudous1/peluche3.png" alt="doudou3"/>
-			<img src="doudous1/peluche4.png" alt="doudou4"/>
-			<img src="doudous1/peluche5.png" alt="doudou5"/>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche1.png" alt="doudou1"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche2.png" alt="doudou2"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche3.png" alt="doudou3"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche4.png" alt="doudou4"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche5.png" alt="doudou5"/></a>
 			
 		</div>
 
@@ -79,11 +79,11 @@
 
 		<div id="listemeilleure">
 
-			<img src="doudous1/peluche6.jpg" alt="doudou1"/>
-			<img src="doudous1/peluche7.jpg" alt="doudou2"/>
-			<img src="doudous1/peluche8.jpg" alt="doudou3"/>
-			<img src="doudous1/peluche9.jpg" alt="doudou4"/>
-			<img src="doudous1/peluche10.jpg" alt="doudou5"/>
+			<a href="../page3/Doudous.html"><img src="doudous1/peluche6.jpg" alt="doudou1"/> </a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche7.jpg" alt="doudou2"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche8.jpg" alt="doudou3"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche9.jpg" alt="doudou4"/></a>
+			<a href="../page3/Doudous.html"> <img src="doudous1/peluche10.jpg" alt="doudou5"/></a>
 			
 		</div>
 
@@ -100,10 +100,10 @@
 		
 		<div id="listevente">
 
-			<img src="avis1/comm1.png" alt="avis1"/>
-			<img src="avis1/comm2.png" alt="avis2"/>
-			<img src="avis1/comm4.png" alt="avis3"/>
-			<img src="avis1/comm5.png" alt="avis4"/>
+			<a href="../page5/commentaire.html"> <img src="avis1/comm1.png" alt="avis1"/></a>
+			<a href="../page5/commentaire.html"> <img src="avis1/comm2.png" alt="avis2"/></a>
+			<a href="../page5/commentaire.html"> <img src="avis1/comm4.png" alt="avis3"/></a>
+			<a href="../page5/commentaire.html"> <img src="avis1/comm5.png" alt="avis4"/></a>
 	
 			
 		</div>
