--- a/page8/rechercher.html
+++ b/page8/rechercher.html
@@ -46,9 +46,9 @@
 
 			<section class="listeart">
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"> <img src = "doudous1/peluche11.jpg" alt = "peluche1"> <p>Cochon rose à la peau très douce, aime particulèrement la boue</p> <p class="prix"> 30€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche11.jpg" alt = "peluche1"> <p>Cochon rose à la peau très douce, aime particulèrement la boue</p> <p class="prix"> 30€ </p> </a>
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"> <p>Cochon sauvage qui n'apprécie que les enfants bagarreurs</p> <p class="prix"> 25€ </p> </a>
+			<a href="../page10/article.html" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"> <p>Cochon sauvage qui n'apprécie que les enfants bagarreurs</p> <p class="prix"> 25€ </p> </a>
 
 
 			</section>
