--- a/page10/article.html
+++ b/page10/article.html
@@ -50,6 +50,7 @@
 
 			<div id="carte"> 
 
+			<p> <strong class ="dispo"> Disponible </strong> </p>
 			<p> <strong> Réf. </strong> &nbsp DC3266 </p> 
 			<p> <strong> Code barre : </strong> &nbsp 3700335232660 </p> 
 			<p> <strong>Marque : </strong> &nbsp COCHONOU </p> 
