ajout article detaillé

--- a/page2/Acceuil.html
+++ b/page2/Acceuil.html
@@ -34,7 +34,7 @@
 			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
 			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
 			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> </a>
 			
 		</ul>
 
@@ -123,13 +123,13 @@
 
 		<div class="avis">
 			<p><a style="text-decoration:none" href="../page5/commentaire.html"> Votre avis </a> </p>
-			<img src = "pouce.png" alt = "avisclient"></a>
+			<img src = "pouce.png" alt = "avisclient">
 
 		</div>
 
 		<div class="contact">
 			<p><a style="text-decoration:none" href="../page7/contacter.html"> Nous contacter </a> </p>
-			<img src = "telephone.png" alt = "contactent"></a>
+			<img src = "telephone.png" alt = "contactent">
 		</div>
 
 		<div class="social">
