--- a/page5/Commentaire.html
+++ b/page5/Commentaire.html
@@ -43,7 +43,7 @@
 	<main>
 	<ul>
 	
-	<li><label>Nom : <input ></label></li>
+	<li><label>Nom : <input type="text" ></label></li>
 	<li><label>Prénom : <input></label></li>
 	<li><label>Adresse(rue, ville, pays) : <input class="champ" placeholder="rue"></label></li>
 	<li><input class="champ" placeholder="Ville"></label></li>
