--- a/page10/article.html
+++ b/page10/article.html
@@ -34,7 +34,7 @@
 			<a id = "first" style="text-decoration:none" href = "../page2/Acceuil.html" > <li> ACCUEIL </li> </a>
 			<a id = "second" style="text-decoration:none" href= "../page4/Promotions.html"> <li> PROMOTIONS </li> </a>
 			<a id = "third" style="text-decoration:none" href="../page3/Doudous.html" > <li> DOUDOUS </li> </a>
-			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> 
+			<a id = "last" style="text-decoration:none" href="../page6/Quisommes.html"> <li> QUI SOMMES-NOUS ? </li> </a>
 			
 		</ul>
 
@@ -44,9 +44,22 @@
 
 		<article id="articles">
 
+			<section id="descrart">
+
+			<div class="description">
+			<p id="titredesc"> Description du produit </p>
+			<p class="texte"> Ce doudou cochon sauvage a été développé par nos équipe de R&D afin de convenir au mieux à vos enfants. Sa peau est conçue pour se rapprocher au maximum de celle de l'animal. La création de ce doudou a été inspiré par le mythe du Grand Cochon Sauvage qui dompta jadis tout un troupeau de vaches. Bien que sa taille à l'écran n'étant guère grande, ce doudou est dotée d'une force de câlinerie supérieure à un doudou moyen. Ses yeux doux ne resisterons pas non plus aux adultes ! </p>
+
+			<p class="commentaire"> Commentaires clients  </p>
+
+			</div>
+
+			</section>
+
+
 			<section class="listeart">
 
-			<a href="https://fr-fr.facebook.com/Disney/" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"> </a>
+			<a href="../page3/Doudous.html" style="text-decoration:none"> <img src = "doudous1/peluche12.jpg" alt = "peluche2" title="Cliquer pour afficher l'image en grand"> </a>
 
 			<div id="carte"> 
 
