--- a/page10/article.html
+++ b/page10/article.html
@@ -1,10 +1,9 @@
-<!DOCTYPE>
-<html>
-
+<!doctype html>
+<html lang="fr">
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="assets10/style10.css">
-    <title>Article</title>
+  <meta charset="utf-8">
+  <title>Article</title>
+  <link rel="stylesheet" type="text/css" href="assets10/style10.css">
 </head>
 
 <body>
@@ -51,6 +50,25 @@
 			<p class="texte"> Ce doudou cochon sauvage a été développé par nos équipe de R&D afin de convenir au mieux à vos enfants. Sa peau est conçue pour se rapprocher au maximum de celle de l'animal. La création de ce doudou a été inspiré par le mythe du Grand Cochon Sauvage qui dompta jadis tout un troupeau de vaches. Bien que sa taille à l'écran n'étant guère grande, ce doudou est dotée d'une force de câlinerie supérieure à un doudou moyen. Ses yeux doux ne resisterons pas non plus aux adultes ! </p>
 
 			<p class="commentaire"> Commentaires clients  </p>
+
+			<p class="commentaire2"> Soyez le premier client à commenter cet article !  </p>
+
+			<div class="ecrire">
+
+			<p> <label> Nom : &nbsp <input type="text"  > </label> </p>
+			<p> <label> Titre de votre avis : &nbsp <input type="text"> </label> </p>
+			<textarea style="width: 300px; height: 200px" placeholder="Votre commentaire"></textarea>
+			
+			<form action="../page10/article.html">
+
+			<button class="envoie"> Envoyé</button>
+			<button> Annuler </button>
+
+			</form>
+
+			</div>
+
+
 
 			</div>
 
