validation achat en cours

--- a/page9/panier.html
+++ b/page9/panier.html
@@ -56,7 +56,7 @@
   		</tr>
 
   		<tr>
-    	<td> <a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"></td> <td colspan="2"> <a> <p>Doudou cochon sauvage</p> <p> Ref. DC3266</p> </td> <td>Disponible</td> <td>25€</td> <td> <p> Quantité : <input id="qt" type="number" value="1"> </p> </td> <td> <a href="../page9/panier.html"><img src = "poubelle.png" alt = "poubelle"> </a> </td> <td>25€</td>
+    	<td> <a href="../page9/panier.html"> <img src = "doudous1/peluche12.jpg" alt = "peluche2"></td> <td colspan="2"> <a> <p>Doudou cochon sauvage</p> <p> Ref. DC3266</p> </td> <td>Disponible</td> <td>25€</td> <td> <input id="qt" type="number" value="1"> </td> <td> <a href="../page9/panier.html"><img src = "poubelle.png" alt = "poubelle"> </a> </td> <td>25€</td>
   		</tr>
 
   		<tr>
