fin page validation

--- a/page11/commande.html
+++ b/page11/commande.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="assets11/style11.css">
-    <title>Panier</title>
+    <title>Commande</title>
 </head>
 
 <body>
@@ -143,16 +143,18 @@
     	</tr>
 
     	<tr>
-    	<td> Virement bancairee</td>  
+    	<td> Virement bancaire</td>  
     	</tr>
 
 		</table>
+
+		<a href="../page11/commande.html"><button id="boutachat"> Confirmer l'achat </button></a>
 			
 		</article>
 
 		</section>
 
-		<button id="boutachat"> Confirmer l'achat </button>
+		
 
 		
 
