--- a/page9/panier.html
+++ b/page9/panier.html
@@ -64,7 +64,7 @@
 
 		</table>
 
-		<button id="boutachat"> Passer à l'achat </button>
+		<a href="../page11/commande.html"><button id="boutachat"> Passer à l'achat </button></a>
 
 		</div>
 
